--- a/Week1/aboutme.html
+++ b/Week1/aboutme.html
@@ -10,7 +10,7 @@
     <body>
         <h1>About Me!</h1>
         <h3>Cameron Jewett</h3>
-        <img src="C:\Users\camer\OneDrive\Documents\Professional\CameronJewett_prof.png" width="250px">
+        <img src="https://live.staticflickr.com/65535/51981141723_c759b75a52.jpg" width="250px">
         <p>Hi everyone! My name is Cameron, and I'm a fourth year Environmental Science Major with minors
             in Digital Humanities and Environmental Systems and Society. I'm from Seattle, WA, and 
             aside from LA have also lived in Singapore. I love being outdoors: <i>camping, hiking, swimming,</i>
@@ -56,6 +56,6 @@
                 </li>
               </ol>
            
-              <img src="C:\Users\camer\OneDrive\Documents\Professional\blu.JPG" width="300px">    
+              <img src="blu.JPG" width="300px">    
     </body>
 </html>
