commit-airport-images

--- a/Week3/index.html
+++ b/Week3/index.html
@@ -18,10 +18,13 @@
 <body>
 
 	<div class="header">
-		My World
+		Cameron Travels the World
 	</div>
 	<div class="sidebar">
-		My Sidebar
+		<body>
+			<p><b>Airports around the world, Ranked:</b></p>
+            <p>Author Note: <i>Don't actually base your opinions of these airports on any of this. All of this is based on 
+                my own silly experience in these airports. All of these airports are great.</i></p>
 	</div>
 	<div class="content">
 		<div id="map"></div>
