--- a/Week3/index.html
+++ b/Week3/index.html
@@ -25,6 +25,34 @@
 			<p><b>Airports around the world, Ranked:</b></p>
             <p>Author Note: <i>Don't actually base your opinions of these airports on any of this. All of this is based on 
                 my own silly experience in these airports. All of these airports are great.</i></p>
+			<p>
+				<b>Which of the following airports have you been to?</b>
+				<form>
+					<input type ="checkbox" id="LAX" name="LAX" value="LAX">
+					<label>LAX</label>
+					<br>
+					<input type ="checkbox" id="Seatac" name="Seatac" value="Seatac">
+					<label>Seatac</label>
+					<br>
+					<input type ="checkbox" id="Changi" name="Changi" value="Changi">
+					<label>Changi</label>
+					<br>
+					<input type ="checkbox" id="Charles De Gaulle" name="Charles De Gaulle" value="Charles De Gaulle">
+					<label>Charles De Gaulle</label>
+					<br>
+					<input type ="checkbox" id="Will Rogers" name="Will Rogers" value="Will Rogers">
+					<label>Will Rogers</label>
+					<br>
+					<input type ="checkbox" id="Narita" name="Narita" value="Narita">
+					<label>Narita</label>
+					<br>
+					<input type ="checkbox" id="Keflavik" name="Keflavik" value="Keflavik">
+					<label>Keflavik</label>
+					<br>
+				</form>
+				<br>
+				Now explore some of the airports on the map by clicking the buttons below!
+			</p>
 	</div>
 	<div class="content">
 		<div id="map"></div>
