--- a/Week7/index.html
+++ b/Week7/index.html
@@ -31,9 +31,9 @@
 		<p>This map analyzes Median Family Income collected from the US Census Bureau, comparing the data from 1970 and 2020.</p>
 		<p>By Alex Bezirjyan (Los Angeles County, CA), Cameron Jewett (King County, WA), Yvonne Nguyen (Santa Clara County, CA), and Camille Wong (Alameda County, CA)</p>
 		<div class="map-item" onclick="mapGeoJSON('SEATTLE_MHI2020',6,'Oranges','equal_interval');">Median Household Income in 2020</div>
-		<div class="map-item" onclick="mapGeoJSON('SEATTLEMHI_1990',6,'Oranges','equal_interval');">Median Household Income in 1990</div>
+		<div class="map-item" onclick="mapGeoJSON('SEATTLE_MedianHouseholdIncome1990',6,'Oranges','equal_interval');">Median Household Income in 1990</div>
 		<div class="map-item" onclick="mapGeoJSON('SEATTLE_MHV2020',6,'Blues','equal_interval');">Median House Value in 2020</div>
-		<div class="map-item" onclick="mapGeoJSON('SEATTLE_MHV1990',6,'Blues','equal_interval');">Median House Value in 1990</div>
+		<div class="map-item" onclick="mapGeoJSON('SEATTLE_MedianHouseholdValue1990',6,'Blues','equal_interval');">Median House Value in 1990</div>
 	</div>
 	<div class="navigation">
 		<!-- <a href="about.html">About Us</a> -->
