--- a/Week7/index.html
+++ b/Week7/index.html
@@ -23,25 +23,32 @@
 <body>
 
 	<div class="header">
-		<b>Public Dollars and Private Stadiums</b>
+		<b>PUBLIC DOLLARS & PRIVATE STADIUMS: TMOBILE STADIUM</b>
 	</div>
 	<div class="sidebar">
-		<p><i>Stadium Spectacle</i> opens an investigation across publicly-funded stadiums in the U.S. under the four major professional sport leagues––the NBA, NFL, MLB, and NHL. With case studies on four major US stadiums: the T-Mobile Arena (Seattle, WA), Dodger Stadium (Los Angeles, CA), the San Jose SAP Center (San Jose, CA), and the RingCentral Coliseum (Oakland, CA), this project will follow the historical neighborhoods these stadiums were built in to chart their impact on the surrounding environment. It will ask not only how stadiums affect the demographics of the neighborhood––including race, property value, and median income, but also interrogate the sites of their construction. </p>
+		<div class="tableauPlaceholder" id="viz1653327316414" style="position: relative; width: 100%; height: 519.75px; overflow: hidden; display: block;"><iframe frameborder="0" marginheight="0" marginwidth="0" title="Data Visualization" allowtransparency="true" allowfullscreen="true" class="tableauViz" style="display: block; width: 100%; height: 519.75px; margin: 0px; padding: 0px; border: none;" src="https://public.tableau.com/views/T-MobileParkConstructionFunding/Sheet1?:embed=y&amp;:showVizHome=no&amp;:host_url=https%3A%2F%2Fpublic.tableau.com%2F&amp;:embed_code_version=3&amp;:tabs=no&amp;:toolbar=yes&amp;:animate_transition=yes&amp;:display_static_image=no&amp;:display_spinner=no&amp;:display_overlay=yes&amp;:display_count=yes&amp;:language=en-US&amp;:loadOrderID=10&amp;:increment_view_count=no"></iframe>
+		</div>
+		
+		<div class="tableauPlaceholder" id="viz1653327355062" style="position: relative; width: 100%; height: 519.75px; overflow: hidden; display: block;"><iframe frameborder="0" marginheight="0" marginwidth="0" title="Data Visualization" allowtransparency="true" allowfullscreen="true" class="tableauViz" style="display: block; width: 100%; height: 519.75px; margin: 0px; padding: 0px; border: none;" src="https://public.tableau.com/views/T-MobileParkRevenueExpenditureCosts2020/Sheet1?:embed=y&amp;:showVizHome=no&amp;:host_url=https%3A%2F%2Fpublic.tableau.com%2F&amp;:embed_code_version=3&amp;:tabs=no&amp;:toolbar=yes&amp;:animate_transition=yes&amp;:display_static_image=no&amp;:display_spinner=no&amp;:display_overlay=yes&amp;:display_count=yes&amp;:language=en-US&amp;:loadOrderID=10&amp;:increment_view_count=no"></iframe>
+		</div>
+		<!-- <p><i>Stadium Spectacle</i> opens an investigation across publicly-funded stadiums in the U.S. under the four major professional sport leagues––the NBA, NFL, MLB, and NHL. With case studies on four major US stadiums: the T-Mobile Arena (Seattle, WA), Dodger Stadium (Los Angeles, CA), the San Jose SAP Center (San Jose, CA), and the RingCentral Coliseum (Oakland, CA), this project will follow the historical neighborhoods these stadiums were built in to chart their impact on the surrounding environment. It will ask not only how stadiums affect the demographics of the neighborhood––including race, property value, and median income, but also interrogate the sites of their construction. </p>
 		<p>The purpose of this project is to analyze the neighborhood in which a stadium is built and the economic implications of public subsidies on professional sport facilities. Our method involves comparing Census data (U.S. Census Bureau) and The Home Owners’ Loan Corporation Redlining Grade Map. This detailed analysis will illustrate the long-term effects of housing segregation in the United States and critically examine the redirection of taxpayer-backed bonds on sports stadiums.</p>
 		<p>This map analyzes Median Family Income collected from the US Census Bureau, comparing the data from 1970 and 2020.</p>
-		<p>By Alex Bezirjyan (Los Angeles County, CA), Cameron Jewett (King County, WA), Yvonne Nguyen (Santa Clara County, CA), and Camille Wong (Alameda County, CA)</p>
+		<p>By Alex Bezirjyan (Los Angeles County, CA), Cameron Jewett (King County, WA), Yvonne Nguyen (Santa Clara County, CA), and Camille Wong (Alameda County, CA)</p> -->
+	</div>
+	<div class="navigation">
 		<div class="map-item" onclick="mapGeoJSON('SEATTLE_MHI2020',6,'Oranges','equal_interval');">Median Household Income in 2020</div>
 		<div class="map-item" onclick="mapGeoJSON('SEATTLE_MedianHouseholdIncome1990',6,'Oranges','equal_interval');">Median Household Income in 1990</div>
 		<div class="map-item" onclick="mapGeoJSON('SEATTLE_MHV2020',6,'Blues','equal_interval');">Median House Value in 2020</div>
 		<div class="map-item" onclick="mapGeoJSON('SEATTLE_MedianHouseholdValue1990',6,'Blues','equal_interval');">Median House Value in 1990</div>
 	</div>
-	<div class="navigation">
-		<!-- <a href="about.html">About Us</a> -->
+	<!--<div class="navigation">
+		 <a href="about.html">About Us</a> 
 		<div class="navigation-item" onclick="navFlyToIndex(47.59159070622367, -122.33214372101791)">T-Mobile Park</div>
 		<div class="navigation-item" onclick="navFlyToIndex(37.75175575650911, -122.20055653051473)">RingCentral Coliseum</div>
 		<div class="navigation-item" onclick="navFlyToIndex(37.33321617153015, -121.9019898728522)">SAP Center</div>
 		<div class="navigation-item" onclick="navFlyToIndex(34.07405537830926, -118.23988319990595)">Dodger Stadium</div>
-	</div>
+	</div> -->
 	<div class="content">
 		<div id="map"></div>
 	</div>
